--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  </head>
  <body >
    <div class="container">
-      <canvas id='canvas' class="canvas" width="500" height="500">Ваш браузер устарел!</canvas>
+      <canvas id='canvas' class="canvas" width="500" height="500"></canvas>
       
       <div id="palette"></div>
      
